fix color gap fieldset

--- a/_src/assets/scss/components/_cards-form-section.scss
+++ b/_src/assets/scss/components/_cards-form-section.scss
@@ -79,7 +79,6 @@
    margin:0 0 20px;
    border:solid 1px $color-card-fill_form-section-input;
    color:$color-card-fill_form-section-input-text;
-   opacity:0.6;
    padding:3px 0 7px 10px;
  }
  .form__fieldset-content-gap:last-child {
